# llama-cpp-rs

./: .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md
.claude/skills/coverage/: SKILL.md
.claude/skills/testing-inference/: SKILL.md
.github/workflows/: ci.yml  unit-tests.yml
examples/: openai_stream.rs  tools.rs  usage.rs
examples/embeddings/: Cargo.toml
examples/embeddings/src/: main.rs
examples/mtmd/: Cargo.toml
examples/mtmd/src/: mtmd.rs
examples/reranker/: Cargo.toml
examples/reranker/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
llama-cpp-2/: Cargo.toml
llama-cpp-2/src/: context.rs  lib.rs  llama_batch.rs  llguidance_sampler.rs  log.rs  model.rs  mtmd.rs  openai.rs  sampling.rs  timing.rs
llama-cpp-2/src/context/: params.rs
llama-cpp-2/src/model/: params.rs
llama-cpp-2/src/model/params/: kv_overrides.rs
llama-cpp-2/src/token/: data_array.rs
llama-cpp-2/tests/: constrained_decoding.rs  embeddings.rs  inference.rs  multimodal.rs  openai_server.rs  openai_streaming.rs  reranker.rs  text_generation.rs  tool_calling.rs
llama-cpp-bindings/: .env.test  Cargo.toml  README.md
llama-cpp-bindings-build/: Cargo.toml
llama-cpp-bindings-build/src/: bindgen_config.rs  cpp_wrapper.rs  cpp_wrapper_mtmd.rs  lib.rs  library_asset_extraction.rs  library_name_extraction.rs  rebuild_tracking.rs  target_os.rs
llama-cpp-bindings-sys/: Cargo.toml  README.md  build.rs  wrapper_common.cpp  wrapper_common.h  wrapper_oai.cpp
llama-cpp-bindings-sys/src/: lib.rs
llama-cpp-bindings/src/: context.rs  error.rs  ffi_error_reader.rs  gguf_context.rs  gguf_context_error.rs  gguf_type.rs  json_schema_to_grammar.rs  lib.rs  llama_backend.rs  llama_backend_device.rs  llama_backend_numa_strategy.rs  llama_batch.rs  llama_time_us.rs  llama_utility.rs  llama_utility_ggml_time_us.rs  llama_utility_json_schema_to_grammar.rs  llama_utility_llama_time_us.rs  llama_utility_max_devices.rs  llama_utility_mlock_supported.rs  llama_utility_mmap_supported.rs  llama_utility_status_is_ok.rs  llama_utility_status_to_i32.rs  llguidance_sampler.rs  log.rs  log_options.rs  max_devices.rs  mlock_supported.rs  mmap_supported.rs  model.rs  mtmd.rs  openai.rs  sampling.rs  test_model.rs  timing.rs  token.rs  token_type.rs
llama-cpp-bindings/src/context/: kv_cache.rs  llama_state_seq_flags.rs  load_seq_state_error.rs  load_session_error.rs  params.rs  save_seq_state_error.rs  save_session_error.rs  session.rs
llama-cpp-bindings/src/grammar/: tests.rs
llama-cpp-bindings/src/model/: add_bos.rs  chat_template_result.rs  grammar_trigger.rs  llama_chat_message.rs  llama_chat_template.rs  llama_lora_adapter.rs  params.rs  rope_type.rs  split_mode.rs  vocab_type.rs
llama-cpp-bindings/src/model/params/: kv_overrides.rs  param_override_value.rs
llama-cpp-bindings/src/mtmd/: mtmd_bitmap.rs  mtmd_context.rs  mtmd_context_params.rs  mtmd_default_marker.rs  mtmd_error.rs  mtmd_input_chunk.rs  mtmd_input_chunk_type.rs  mtmd_input_chunks.rs  mtmd_input_text.rs
llama-cpp-bindings/src/openai/: chat_parse_state_oaicompat.rs  chat_template_result_grammar.rs  openai_chat_template_params.rs
llama-cpp-bindings/src/token/: data.rs  data_array.rs  logit_bias.rs
llama-cpp-bindings/tests/: constrained_decoding.rs  embeddings.rs  inference.rs  multimodal.rs  openai_server.rs  openai_streaming.rs  reranker.rs  text_generation.rs  tool_calling.rs
llama-cpp-build/: Cargo.toml
llama-cpp-build/src/: android_ndk.rs  bindgen_config.rs  cmake_config.rs  cpp_wrapper.rs  cpp_wrapper_mtmd.rs  lib.rs  library_extraction.rs  library_linking.rs  shared_libs.rs  target_os.rs
llama-cpp-sys-2/: Cargo.toml  build.rs
scripts/: coverage-uncovered-lines.py
