[workspace]
resolver = "2"
members = [
  "llama-cpp-build",
  "llama-cpp-sys-2",
  "llama-cpp-2",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# core
encoding_rs = "0.8.35"
enumflags2 = "0.7.12"
llama-cpp-2 = { path = "llama-cpp-2", version = "0.1.138" }
llama-cpp-sys-2 = { path = "llama-cpp-sys-2", version = "0.1.138" }
thiserror = "2"
tracing = "0.1"
tracing-core = "0.1"

# build
bindgen = "0.72.1"
cc = "1.2.56"
cmake = "0.1"
find_cuda_helper = "0.2.0"
glob = "0.3.3"
llama-cpp-build = { path = "llama-cpp-build", version = "0.1.138" }
walkdir = "2"

# dev
anyhow = "1.0.102"
hf-hub = "0.4.3"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["json"] }

