[package]
name = "llama-cpp-build"
description = "Build system for llama-cpp-sys-2 FFI bindings"
version = "0.1.138"
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/utilityai/llama-cpp-rs"

[dependencies]
bindgen = { workspace = true }
cc = { workspace = true, features = ["parallel"] }
cmake = { workspace = true }
find_cuda_helper = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }

[features]
cuda = []
cuda-no-vmm = ["cuda"]
metal = []
dynamic-link = []
vulkan = []
openmp = []
rocm = []
shared-stdcxx = []
system-ggml = []
mtmd = []

[lints.rust]
missing_docs = "allow"
missing_debug_implementations = { level = "warn" }

[lints.clippy]
pedantic = { level = "warn" }
