[package]
name = "llama-cpp-sys-2"
description = "Low Level Bindings to llama.cpp"
version = "0.1.138"
edition.workspace = true
license = "MIT OR Apache-2.0"
repository = "https://github.com/utilityai/llama-cpp-rs"
links = "llama"

include = [
    "wrapper.h",
    "wrapper_common.h",
    "wrapper_common.cpp",
    "wrapper_oai.h",
    "wrapper_oai.cpp",
    "wrapper_utils.h",
    "wrapper_mtmd.h",
    "build.rs",
    "/src",

    "/llama.cpp/common/**/*.h",
    "/llama.cpp/common/**/*.hpp",
    "/llama.cpp/common/**/*.cpp",
    "/llama.cpp/ggml/include/*.h",
    "/llama.cpp/ggml/src/*.h",
    "/llama.cpp/ggml/src/*.c",
    "/llama.cpp/ggml/src/*.cpp",
    "/llama.cpp/src/*.h",
    "/llama.cpp/src/*.cpp",
    "/llama.cpp/src/models/*.h",
    "/llama.cpp/src/models/*.cpp",
    "/llama.cpp/tools/mtmd/*.h",
    "/llama.cpp/tools/mtmd/*.cpp",
    "/llama.cpp/tools/mtmd/models/*.h",
    "/llama.cpp/tools/mtmd/models/*.cpp",

    "/llama.cpp/convert_hf_to_gguf.py", # Yes, it's required
    "/llama.cpp/common/build-info.cpp.in",

    "/llama.cpp/ggml/src/ggml-cuda.cu",
    "/llama.cpp/ggml/src/ggml-metal.m",
    "/llama.cpp/ggml/src/ggml-metal.metal",

    "/llama.cpp/include/llama.h",
    "/llama.cpp/include/llama-cpp.h",

    "/llama.cpp/ggml/src/ggml-cpu/**/*",
    "/llama.cpp/ggml/src/ggml-cuda/**/*",
    "/llama.cpp/ggml/src/ggml-metal/**/*",
    "/llama.cpp/ggml/src/ggml-vulkan/**/*",
    "/llama.cpp/ggml/src/ggml-hip/**/*",

    "/llama.cpp/ggml/src/llamafile/sgemm.h",
    "/llama.cpp/ggml/src/llamafile/sgemm.cpp",

    "/llama.cpp/pocs",
    "/llama.cpp/vendor",

    "/llama.cpp/CMakeLists.txt",
    "/llama.cpp/common/CMakeLists.txt",
    "/llama.cpp/ggml/CMakeLists.txt",
    "/llama.cpp/ggml/src/CMakeLists.txt",
    "/llama.cpp/src/CMakeLists.txt",

    "/llama.cpp/cmake",
    "/llama.cpp/ggml/cmake",
    "/llama.cpp/common/cmake",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
llama-cpp-build = { workspace = true, features = [] }

[features]
cuda = ["llama-cpp-build/cuda"]
cuda-no-vmm = ["cuda", "llama-cpp-build/cuda-no-vmm"]
metal = ["llama-cpp-build/metal"]
dynamic-link = ["llama-cpp-build/dynamic-link"]
vulkan = ["llama-cpp-build/vulkan"]
openmp = ["llama-cpp-build/openmp"]
rocm = ["llama-cpp-build/rocm"]
shared-stdcxx = ["llama-cpp-build/shared-stdcxx"]
system-ggml = ["llama-cpp-build/system-ggml"]
mtmd = ["llama-cpp-build/mtmd"]
