[package]
name = "mtmd"
version = "0.1.86"
edition.workspace = true
publish = false

[dependencies]
llama-cpp-2 = { workspace = true, features = ["mtmd"] }
clap = { workspace = true, features = ["derive"] }
encoding_rs = { workspace = true }

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]

[lints]
workspace = true

[[example]]
name = "mtmd"
path = "src/mtmd.rs"
