[package]
name = "openai-server"
version = "0.1.133"
edition.workspace = true
publish = false

[dependencies]
llama-cpp-2 = { workspace = true }
actix-web = { workspace = true }
serde_json = { workspace = true }
encoding_rs = { workspace = true }
hf-hub = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
vulkan = ["llama-cpp-2/vulkan"]

[lints]
workspace = true
